gui/checklist/exec/CheckListExec: Avoid using command line built with string concatenation.